# Jhon-Crow-focus-desktop-sim-rust

./: CLAUDE.md  Cargo.toml  README.md
src/: camera.rs  desk_object.rs  main.rs  mesh.rs  physics.rs  shader.wgsl  ui.rs
